--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -11,7 +11,7 @@ on:
         required: true
         default: ''
 env:
-  GITHUB_TOKEN: ${{ secrets.ORG_GITHUB_TOKEN }}
+  GITHUB_TOKEN: ${{ secrets.SEMVER_GITHUB_PAT }}
 jobs:
   test:
     runs-on: ubuntu-latest
